--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "serve": "bunx @11ty/eleventy --serve --formats=mdx"
   },
   "dependencies": {
-    "@mdx-js/node-loader": "^3.1.0",
-    "react-dom": "^18.3.1"
+    "@mdx-js/mdx": "^3.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   }
 }
